5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1684_1100.log
== TEST (2019-04-24 18:07:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)
a 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a 
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if("Animal:" == 2 ):
	print("tartaruga")

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:11:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if("Animal:" == tartaruga ):
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:12:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if("Animal:" == "tartaruga" ):
	print(2)
	

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:12:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Tartaruga")
	

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:13:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
	

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:16:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
if(x == 5):
	print("Animal: garça")

	

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:16:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
if(x == 5):
	print("Animal: garca")

	

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:21:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
if(x == 5):
	print("Animal: garca")
if(x == 10):
	print("Animal: Arara")
if(x == 20):
	print("Animal: Mico-leao-dourado")
if(x == 50):
	print("Animal: Onca-pintada")
if(x == 100):
	print("Animal: Garoupa")


	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:22:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
if(x == 5):
	print("Animal: garca")
if(x == 10):
	print("Animal: Arara")
if(x == 20):
	print("Animal: Mico-leao-dourado")
if(x == 50):
	print("Animal: Onca-pintada")
if(x == 100):
	print("Animal: Garoupa")


	

-- EXECUTION TIME:
0.12862
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:22:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
if(x == 5):
	print("Animal: garca")
if(x == 10):
	print("Animal: Arara")
if(x == 20):
	print("Animal: Mico-leao-dourado")
if(x == 50):
	print("Animal: Onca-pintada")
if(x == 100):
	print("Animal: Garoupa")


	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:23:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
if(x == 5):
	print("Animal: Garca")
if(x == 10):
	print("Animal: Arara")
if(x == 20):
	print("Animal: Mico-leao-dourado")
if(x == 50):
	print("Animal: Onca-pintada")
if(x == 100):
	print("Animal: Garoupa")


	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:23:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

if(x == 2 ):
	print("Animal: Tartaruga")
if(x == 5):
	print("Animal: Garca")
if(x == 10):
	print("Animal: Arara")
if(x == 20):
	print("Animal: Mico-leao-dourado")
if(x == 50):
	print("Animal: Onca-pintada")
if(x == 100):
	print("Animal: Garoupa")


	

-- EXECUTION TIME:
0.133043
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:25:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

Tartaruga = 2
Garca = 5
Arara = 10
Mico-leao-dourado = 20


	

-- ERROR:
File "XXXX", line 10
    Mico-leao-dourado = 20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:25:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
print("Entrada:",x)

Tartaruga = 2
Garca = 5
Arara = 10
Mico_-_leao_-_dourado = 20


	

-- ERROR:
File "XXXX", line 10
    Mico_-_leao_-_dourado = 20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:44:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

a = "Mico-leao-dourado" == 20

print(a)






	

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:45:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

a = "Mico-leao-dourado" == x

print(a)






	

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:55:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))
animais = 2,5,10,20,50,100
if(x != animais):
	print("invalido")








	

-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:56:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

if(x == 2):
	print("")








	

-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:56:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

if(x == 2):
	print("Animal: tartaruga")








	

-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:59:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")








	

-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:59:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")








	

-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:03:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))


if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	
print("Entrada:",x)







	

-- OUTPUT:
Animal: Garoupa
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:04:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:04:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:04:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.147826
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:06:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:06:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.272971
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:07:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:08:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:08:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garça")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:09:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garça")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:09:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:09:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:09:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.130646
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:10:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:13:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

animais = if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 8
    animais = if(x == 2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:18:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) or (x != 10) or (x != 20) or (x != 50) or (x != 100):
	print("Animal: invalido")
if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: invalido
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:18:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) or (x != 10) or (x != 20) or (x != 50) or (x != 100):
	print("Animal: invalido")
if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.146595
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: invalido
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: invalido
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:18:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) or (x != 10) or (x != 20) or (x != 50) or (x != 100):
	print("Animal: invalido")
if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: invalido
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:19:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")
if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:19:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")
if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.18496
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:19:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")
if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:20:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")
if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:21:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")
else:
	if(x == 2):
		print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 12
    elif(x == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:22:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
elif(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

if(x == 2):
		print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 7
    elif(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:22:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

if(x == 2):
		print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:23:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
		print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:23:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
		print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.146885
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:24:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

	elif(x == 2):
		print("Animal: Tartaruga")
	elif(x == 5):
		print("Animal: Garca")
	elif(x == 10):
	print("Animal: Arara")
	elif(x == 20):
	print("Animal: Mico-leao-dourado")
	elif(x == 50):
	print("Animal: Onca")
	elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 10
    elif(x == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:24:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

		elif(x == 2):
		print("Animal: Tartaruga")
	elif(x == 5):
		print("Animal: Garca")
	elif(x == 10):
	print("Animal: Arara")
	elif(x == 20):
	print("Animal: Mico-leao-dourado")
	elif(x == 50):
	print("Animal: Onca")
	elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 10
    elif(x == 2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:24:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
		print("Animal: Tartaruga")
	elif(x == 5):
		print("Animal: Garca")
	elif(x == 10):
	print("Animal: Arara")
	elif(x == 20):
	print("Animal: Mico-leao-dourado")
	elif(x == 50):
	print("Animal: Onca")
	elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 12
    elif(x == 5):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:24:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
		print("Animal: Tartaruga")
			elif(x == 5):
		print("Animal: Garca")
	elif(x == 10):
	print("Animal: Arara")
	elif(x == 20):
	print("Animal: Mico-leao-dourado")
	elif(x == 50):
	print("Animal: Onca")
	elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 12
    elif(x == 5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:25:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
		print("Animal: Tartaruga")
elif(x == 5):
		print("Animal: Garca")
	elif(x == 10):
	print("Animal: Arara")
	elif(x == 20):
	print("Animal: Mico-leao-dourado")
	elif(x == 50):
	print("Animal: Onca")
	elif(x == 100):
	print("Animal: Garoupa")
	








	

-- ERROR:
File "XXXX", line 14
    elif(x == 10):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:25:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:25:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.111307
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:26:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:27:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- EXECUTION TIME:
0.164643
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:27:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)
if(x != 5) and (x != 10) and (x != 20) and (x != 50) and (x != 100):
	print("Animal: invalido")

elif(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:29:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

elif(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	








	

-- ERROR:
File "XXXX", line 8
    elif(x == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:30:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:30:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca")
elif(x == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	








	

-- EXECUTION TIME:
0.199711
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:31:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca-pintada")
elif(x == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	








	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:31:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: "))

print("Entrada:",x)

if(x == 2):
	print("Animal: Tartaruga")
elif(x == 5):
	print("Animal: Garca")
elif(x == 10):
	print("Animal: Arara")
elif(x == 20):
	print("Animal: Mico-leao-dourado")
elif(x == 50):
	print("Animal: Onca-pintada")
elif(x == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	








	

-- EXECUTION TIME:
0.184098
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
